[gd_scene load_steps=3 format=2]

[ext_resource path="res://StabWeapon.gd" type="Script" id=1]
[ext_resource path="res://assets/art/weapons/sword.png" type="Texture" id=2]

[node name="StabWeapon" type="Area2D"]
collision_layer = 3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 2
position = Vector2( 0, -12 )
texture = ExtResource( 2 )

[node name="cooldown" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_MeleeWeapon_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_MeleeWeapon_body_exited"]
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
